# tower-reqwest

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  dprint.json  flake.nix  rustfmt.toml  taplo.toml  treefmt.nix
.github/workflows/: ci.yml
src/: dummy.rs  error.rs  lib.rs  middleware.rs  util.rs
src/adapters/: mod.rs  reqwest.rs
src/reqwest_compat/: mod.rs  response.rs
tower-http-client/: Cargo.toml  README.md
tower-http-client-core/: Cargo.toml
tower-http-client/examples/: body_reader_bytes.rs  body_reader_json.rs  body_reader_utf8.rs  rate_limiter.rs  retry.rs
tower-http-client/src/: adapters.rs  body_reader.rs  into_uri.rs  lib.rs  request.rs  request_builder.rs  response_ext.rs  service_ext.rs  util.rs
tower-http-client/src/client/: body_reader.rs  into_uri.rs  mod.rs  request_builder.rs  response_ext.rs  service_ext.rs
tower-http-client/src/util/: boxed_clone_sync.rs  mod.rs
tower-http-client/tests/: service_ext.rs
tower-http-client/tests/utils/: mod.rs
tower-reqwest/: Cargo.toml  README.md
tower-reqwest/src/: error.rs  lib.rs  util.rs
tower-reqwest/src/adapters/: mod.rs  reqwest.rs  reqwest_middleware.rs
