[workspace]
resolver = "2"
members = ["tower-http-client", "tower-reqwest"]

[workspace.package]
version = "0.3.0-dev.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/tower-reqwest"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
include-utils = "0.2"
pin-project = "1.0"
pretty_assertions = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
reqwest-middleware = { version = "0.3.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", default-features = false, features = ["util"] }
wiremock = "0.6.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
