[workspace]
resolver = "2"
members = ["tower-http-client", "tower-reqwest"]

[workspace.package]
edition = "2021"
categories = [
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
]
keywords = ["io", "async", "futures", "service", "http"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/tower-reqwest"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.6"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
include-utils = "0.2"
pin-project = "1.0"
pretty_assertions = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4", default-features = false }
tower-service = "0.3"
tower-layer = "0.3"
tower-http = { version = "0.5.2", default-features = false, features = [
  "util",
] }
wiremock = "0.6.0"
retry-policies = "0.4.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
