[package]
name = "tower-http-client"
description = "Extra Tower middlewares and utilities for HTTP clients."
documentation = "https://docs.rs/crate/tower-http-client"
readme = "README.md"

version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
tower-reqwest = { version = "0.3.2", path = "../tower-reqwest", optional = true }

bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
include-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tower-reqwest = { version = "0.3.2", path = "../tower-reqwest" }

anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
wiremock = { workspace = true }

[features]
default = ["json"]
json = ["dep:serde_json"]
reqwest = ["dep:tower-reqwest"]
reqwest-middleware = ["tower-reqwest?/reqwest-middleware"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
