[package]
name = "tower-reqwest"
description = "Adapter between reqwest and tower-http crates."

readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[features]
default = ["reqwest-middleware"]
reqwest-middleware = ["dep:reqwest-middleware"]

[dependencies]
futures-util = "0.3"
http = "1.0"
include-utils = "0.2"
pin-project = "1.0"
reqwest = { version = "0.12" }
reqwest-middleware = { version = "0.3.0", optional = true }
thiserror = "1.0"
tower = { version = "0.4" }
tower-http = { version = "0.5", default-features = false }

[dev-dependencies]
anyhow = "1.0"
http-body-util = "0.1"
pretty_assertions = "1.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["set-header", "util", "request-id"] }
wiremock = "0.6.0"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
