[package]
description = "Adapter between reqwest and tower-http crates."
documentation = "https://docs.rs/crate/tower-reqwest"
name = "tower-reqwest"
readme = "README.md"
version = "0.3.3"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
reqwest-middleware = ["dep:reqwest-middleware"]

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
include-utils = { workspace = true }
pin-project = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true, optional = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util", "request-id"] }
wiremock = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
